k8s/ingress.yaml
 apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ws-ingress
    namespace: workshop
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ws-svc
              port:
                number: 80
        - path: /metrics
          pathType: Prefix
          backend:
            service:
              name: ws-svc
              port:
                number: 80
